--- a/scenarioS/weather/forecast/hourly/on-118_metric_e.html
+++ b/scenarioS/weather/forecast/hourly/on-118_metric_e.html
@@ -212,74 +212,74 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       </tr>
       <tr>
         <td headers="header1" class="text-center">15:00</td>
-       <td headers="header2" class="text-center">-1</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/17.png" alt="Snow"/></span><div class="media-body">
-            <p>Snow</p>
+       <td headers="header2" class="text-center">-6</td>
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/18.png" alt="Heavy Snow"/></span><div class="media-body">
+            <p>Heavy Snow</p>
           </div>
         </td>
         <td headers="header4" class="text-center">High</td>
         <td headers="header5" class="text-center">
            <abbr title="West">W</abbr> 30<br/>
 									gust 50</td>
-        <td headers="header7" class="text-center">-10</td>
+        <td headers="header7" class="text-center">-14</td>
       </tr>
       <tr>
         <td headers="header1" class="text-center">16:00</td>
-               <td headers="header2" class="text-center">-1</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/17.png" alt="Snow"/></span><div class="media-body">
-            <p>Snow</p>
+                <td headers="header2" class="text-center">-6</td>
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/18.png" alt="Heavy Snow"/></span><div class="media-body">
+            <p>Heavy Snow</p>
           </div>
         </td>
         <td headers="header4" class="text-center">High</td>
         <td headers="header5" class="text-center">
            <abbr title="West">W</abbr> 30<br/>
 									gust 50</td>
-        <td headers="header7" class="text-center">-10</td>
+        <td headers="header7" class="text-center">-14</td>
       </tr>
       <tr>
         <td headers="header1" class="text-center">17:00</td>
-        <td headers="header2" class="text-center">-1</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/17.png" alt="Snow"/></span><div class="media-body">
-            <p>Snow</p>
+         <td headers="header2" class="text-center">-6</td>
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/18.png" alt="Heavy Snow"/></span><div class="media-body">
+            <p>Heavy Snow</p>
           </div>
         </td>
         <td headers="header4" class="text-center">High</td>
         <td headers="header5" class="text-center">
            <abbr title="West">W</abbr> 30<br/>
 									gust 50</td>
-        <td headers="header7" class="text-center">-10</td>
+        <td headers="header7" class="text-center">-14</td>
       </tr>
       <tr>
         <td headers="header1" class="text-center">18:00</td>
-        <td headers="header2" class="text-center">-1</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/17.png" alt="Snow"/></span><div class="media-body">
-            <p>Snow</p>
+         <td headers="header2" class="text-center">-6</td>
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/18.png" alt="Heavy Snow"/></span><div class="media-body">
+            <p>Heavy Snow</p>
           </div>
         </td>
         <td headers="header4" class="text-center">High</td>
         <td headers="header5" class="text-center">
            <abbr title="West">W</abbr> 30<br/>
 									gust 50</td>
-        <td headers="header7" class="text-center">-10</td>
+        <td headers="header7" class="text-center">-14</td>
       </tr>
       <tr>
         <td headers="header1" class="text-center">19:00</td>
-        <td headers="header2" class="text-center">-3</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/17.png" alt="Snow"/></span><div class="media-body">
-            <p>Snow</p>
+         <td headers="header2" class="text-center">-6</td>
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/18.png" alt="Heavy Snow"/></span><div class="media-body">
+            <p>Heavy Snow</p>
           </div>
         </td>
         <td headers="header4" class="text-center">High</td>
         <td headers="header5" class="text-center">
            <abbr title="West">W</abbr> 30<br/>
 									gust 50</td>
-        <td headers="header7" class="text-center">-12</td>
+        <td headers="header7" class="text-center">-14</td>
       </tr>
       <tr>
         <td headers="header1" class="text-center">20:00</td>
-        <td headers="header2" class="text-center">-6</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/17.png" alt="Snow"/></span><div class="media-body">
-            <p>Snow</p>
+         <td headers="header2" class="text-center">-6</td>
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/18.png" alt="Heavy Snow"/></span><div class="media-body">
+            <p>Heavy Snow</p>
           </div>
         </td>
         <td headers="header4" class="text-center">High</td>
@@ -290,9 +290,9 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       </tr>
       <tr>
         <td headers="header1" class="text-center">21:00</td>
-        <td headers="header2" class="text-center">-6</td>
-       <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/17.png" alt="Snow"/></span><div class="media-body">
-            <p>Snow</p>
+         <td headers="header2" class="text-center">-6</td>
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/18.png" alt="Heavy Snow"/></span><div class="media-body">
+            <p>Heavy Snow</p>
           </div>
         </td>
         <td headers="header4" class="text-center">High</td>
@@ -303,9 +303,9 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       </tr>
       <tr>
         <td headers="header1" class="text-center">22:00</td>
-        <td headers="header2" class="text-center">-6</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/17.png" alt="Snow"/></span><div class="media-body">
-            <p>Snow</p>
+         <td headers="header2" class="text-center">-6</td>
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/18.png" alt="Heavy Snow"/></span><div class="media-body">
+            <p>Heavy Snow</p>
           </div>
         </td>
         <td headers="header4" class="text-center">High</td>
