--- a/scenarioS/weather/warnings/ottawa-report_e.html
+++ b/scenarioS/weather/warnings/ottawa-report_e.html
@@ -180,7 +180,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <ul> <li>Ottawa</li> </ul>
  <p>BLOWING SNOW ADVISORY IN EFFECT FOR OTTAWA.<br/><br/>Snowfall, with total amounts of 10 to 15 cm is expected.<br/>
 
-	<br/>Total snowfall amounts near 15 cm are forecast, with snow beginning this afternoon and continuing through the night. In some areas, snow is expected to become mixed with or change over to ice pellets and freezing rain on Sunday night before tapering off Monday morning.<br/>
+	<br/>Total snowfall amounts near 15 cm are forecast, with snow beginning around noon and continuing through the night. In some areas, snow is expected to become mixed with or change over to ice pellets and freezing rain on Sunday night before tapering off Monday morning.<br/>
 
 <br/>Be prepared to adjust your driving with changing road conditions. Accumulating snow could make travel difficult over some locations.<br/>
 
