--- a/scenarioS/weather/radar/xft-index_e.html
+++ b/scenarioS/weather/radar/xft-index_e.html
@@ -267,7 +267,7 @@
 			
 			
 
-			<img 
+			<!-- <img 
 			width="580" 
 			height="480" 
 			src="../cacheable/images/radar/layers_detailed/default_cities/xft_towns.gif" 
@@ -281,7 +281,7 @@
 
 			<img class="overlay-img-nojs overlay-img img-responsive wxo-hide-overlay" width="580" height="480" src="../cacheable/images/radar/layers_detailed/rivers/xft_rivers.gif" id="river" alt="Rivers" style="z-index: 55;">
 
-			<img class="overlay-img-nojs overlay-img img-responsive " width="580" height="480" src="../cacheable/images/radar/layers_detailed/radar_circle/radar_circle.gif" alt="Radar Circles" id="radar_circle" style="z-index: 58;">
+			<img class="overlay-img-nojs overlay-img img-responsive " width="580" height="480" src="../cacheable/images/radar/layers_detailed/radar_circle/radar_circle.gif" alt="Radar Circles" id="radar_circle" style="z-index: 58;"> -->
 			
 			
 
