consistency in mobile conditions

--- a/scenarioA/weather/city/pages/on-118_metric_e.html
+++ b/scenarioA/weather/city/pages/on-118_metric_e.html
@@ -501,7 +501,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             </th>
           </tr>
           <tr>
-            <td><img width="60" height="51" src="../../../weather/weathericons/44.gif" alt="Smoke" class="center-block" title="Smoke"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">21&deg;<abbr title="Celsius">C</abbr>
+            <td><img width="60" height="51" src="../../../weather/weathericons/44.gif" alt="Smoke" class="center-block" title="Smoke"><p class="mrgn-bttm-0"><span class="high wxo-metric-hide" title="max">25&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="high wxo-imperial-hide wxo-city-hidden" title="max">70&deg;<abbr title="Fahrenheit">F</abbr>
                 </span>
               </p>
@@ -576,7 +576,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           </tr>
           <tr>
           <tr>
-            <td><img width="60" height="51" src="../../../weather/weathericons/39.gif" alt="A few showers or thunderstorms" class="center-block" title="A few showers or thunderstorms"><p class="mrgn-bttm-0"><span class="low wxo-metric-hide" title="min">12&deg;<abbr title="Celsius">C</abbr>
+            <td><img width="60" height="51" src="../../../weather/weathericons/39.gif" alt="A few showers or thunderstorms" class="center-block" title="A few showers or thunderstorms"><p class="mrgn-bttm-0"><span class="low wxo-metric-hide" title="min">26&deg;<abbr title="Celsius">C</abbr>
                 </span><span class="low wxo-imperial-hide wxo-city-hidden" title="min">54&deg;<abbr title="Fahrenheit">F</abbr>
                 </span>
               </p>
@@ -652,13 +652,13 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
                       <strong title="Sunday">Today</strong>
                     </a>
                   </td>
-                  <td>Increasing cloudiness. A few showers or thunderstorms beginning near noon. Risk of a severe thunderstorm. Wind becoming southwest 20 km/h this afternoon. High 21. Humidex 25. UV index 3 or moderate.</td>
+                  <td>Increasing cloudiness. A few showers or thunderstorms beginning near noon. Risk of a severe thunderstorm. Wind becoming southwest 20 km/h this afternoon. High 28. Humidex 25. UV index 3 or moderate.</td>
                 </tr>
                 <tr class="pdg-tp-0">
                   <td>
                     <strong title="Sunday night">Tonight</strong>
                   </td>
-                  <td>A few showers or thunderstorms ending late this evening then mainly cloudy. Risk of a severe thunderstorm this evening. Wind southwest 20 km/h becoming light this evening. Low 12.</td>
+                  <td>A few showers or thunderstorms ending late this evening then mainly cloudy. Risk of a severe thunderstorm this evening. Wind southwest 20 km/h becoming light this evening. Low 26.</td>
                 </tr>
                 <tr class="pdg-btm-0">
                   <td class="uniform_width">
@@ -753,12 +753,12 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <section>
           <h3 class="h5 mrgn-lft-md hidden-print"><span class="wb-inv">Detailed Forecast</span>Issued: 5:00 AM EDT Thursday 24 August 2017</h3>
           <div class="row">
-            <div class="col-xs-6"><img width="60" height="51" src="../../../weather/weathericons/06.gif" alt="Chance of showers" class="pull-right" title="Chance of showers"></div>
+            <div class="col-xs-6"><img width="60" height="51" src="../../../weather/weathericons/44.gif" alt="Smoke" class="pull-right" title="Smoke"></div>
             <div class="col-xs-6">
               <a href="/forecast/hourly/on-118_metric_e.html">
                 <strong title="Friday">Today</strong>
               </a>
-              <br><span class="high wxo-metric-hide" title="max">29&deg;<abbr title="Celsius">C</abbr>
+              <br><span class="high wxo-metric-hide" title="max">25&deg;<abbr title="Celsius">C</abbr>
               </span><span class="high wxo-imperial-hide wxo-city-hidden" title="max">84&deg;<abbr title="Fahrenheit">F</abbr>
               </span>
             </div>
@@ -838,13 +838,13 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
               <strong>
                 <abbr title="Tuesday">Tue</abbr>, 25 <abbr title="July">Jul</abbr>
               </strong>
-              <br><span class="high wxo-metric-hide" title="max">21&deg;<abbr title="Celsius">C</abbr>
+              <br><span class="high wxo-metric-hide" title="max">25&deg;<abbr title="Celsius">C</abbr>
               </span><span class="high wxo-imperial-hide wxo-city-hidden" title="max">70&deg;<abbr title="Fahrenheit">F</abbr>
               </span>
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-12">A mix of sun and cloud. High 21.</div>
+            <div class="col-xs-12">A mix of sun and cloud. High 25.</div>
           </div>
           <div class="row">
             <div class="col-xs-12 brdr-bttm mrgn-bttm-md">
