--- a/scenarioT/weather/radar/index_e.html
+++ b/scenarioT/weather/radar/index_e.html
@@ -608,7 +608,7 @@
 				<li class="rad-loc"><a href="index_e.html?id=WBI">Britt (Near Sudbury)</a></li>
 				<li class="rad-loc"><a href="index_e.html?id=XDR">Dryden</a></li>
 				<li class="rad-loc"><a href="index_e.html?id=WSO">Exeter (near London)</a></li>
-				<li><a href="../radar/xft-index_thunder_e.html">Franktown (near Ottawa)</a></li>
+				<li><a href="../radar/xft-index_e.html">Franktown (near Ottawa)</a></li>
 				<li class="rad-loc"><a href="index_e.html?id=WKR">King City (near Toronto)</a></li>
 				<li class="rad-loc"><a href="index_e.html?id=WGJ">Montreal River (near Sault Ste Marie)</a></li>
 				<li class="rad-loc"><a href="index_e.html?id=XTI">Northeast Ontario (near Timmins)</a></li>
