--- a/scenarioT/weather/radar/xft-index_e.html
+++ b/scenarioT/weather/radar/xft-index_e.html
@@ -441,7 +441,7 @@
 				
 					<div class="radio">
 						<label>
-							<input type="radio" name="group1" value="long" onClick="window.location='https://www.canada.ca/home.html';" > Long (3hr) <br>
+							<input type="radio" name="group1" value="long" > Long (3hr) <br>
 						</label>
 				</div>
 					
