--- a/scenarioT/weather/forecast/hourly/on-118_metric_e.html
+++ b/scenarioT/weather/forecast/hourly/on-118_metric_e.html
@@ -205,50 +205,50 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 	  
 	  <td headers="header1" class="text-center">8:00</td>
         <td headers="header2" class="text-center">20</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/06.png" alt="Chance of showers" /></span><div class="media-body">
-            <p>Chance of showers</p>
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/03.png" alt="Mostly Cloudy" /></span><div class="media-body">
+            <p>Mostly Cloudy</p>
           </div>
         </td>
         <td headers="header4" class="text-center">Low</td>
         <td headers="header5" class="text-center">
-          <abbr title="West">W</abbr> 20<br />
-									gust 40</td>
+          <abbr title="West">S SW</abbr> 17<br />
+									</td>
       </tr>
 	  
         <td headers="header1" class="text-center">9:00</td>
         <td headers="header2" class="text-center">20</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/06.png" alt="Chance of showers" /></span><div class="media-body">
-            <p>Chance of showers</p>
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/03.png" alt="Mostly Cloudy" /></span><div class="media-body">
+            <p>Mostly Cloudy</p>
           </div>
         </td>
         <td headers="header4" class="text-center">Low</td>
         <td headers="header5" class="text-center">
-          <abbr title="West">W</abbr> 20<br />
-									gust 40</td>
+          <abbr title="West">S SW</abbr> 17<br />
+									</td>
       </tr>
       <tr>
         <td headers="header1" class="text-center">10:00</td>
-        <td headers="header2" class="text-center">21</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/06.png" alt="Chance of showers" /></span><div class="media-body">
-            <p>Chance of showers</p>
+         <td headers="header2" class="text-center">21</td>
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/03.png" alt="Mostly Cloudy" /></span><div class="media-body">
+            <p>Mostly Cloudy</p>
           </div>
         </td>
-        <td headers="header4" class="text-center">Medium</td>
+        <td headers="header4" class="text-center">Low</td>
         <td headers="header5" class="text-center">
-          <abbr title="West">W</abbr> 20<br />
-									gust 40</td>
+          <abbr title="West">S SW</abbr> 17<br />
+									</td>
       </tr>
       <tr>
         <td headers="header1" class="text-center">11:00</td>
-        <td headers="header2" class="text-center">21</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/06.png" alt="Periods of rain" /></span><div class="media-body">
-            <p>Chance of showers</p>
+         <td headers="header2" class="text-center">20</td>
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/03.png" alt="Mostly Cloudy" /></span><div class="media-body">
+            <p>Mostly Cloudy</p>
           </div>
         </td>
-        <td headers="header4" class="text-center">Medium</td>
+        <td headers="header4" class="text-center">Low</td>
         <td headers="header5" class="text-center">
-          <abbr title="West">W</abbr> 20<br />
-									gust 40</td>
+          <abbr title="West">S SW</abbr> 17<br />
+									</td>
       </tr>
       <tr>  
       </tr>
@@ -262,7 +262,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header4" class="text-center">High</td>
         <td headers="header5" class="text-center">
           <abbr title="Northwest">NW</abbr> 20<br />
-									gust 40</td>
+									</td>
       </tr>
       <tr>
         <td headers="header1" class="text-center">13:00</td>
@@ -283,7 +283,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             <p>Periods of rain. Risk of severe thunderstorms</p>
           </div>
         </td>
-        <td headers="header4" class="text-center">Medium</td>
+        <td headers="header4" class="text-center">High</td>
         <td headers="header5" class="text-center">
           <abbr title="Northwest">NW</abbr> 10<br />
         </td>
@@ -356,7 +356,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             <p>Partly cloudy</p>
           </div>
         </td>
-        <td headers="header4" class="text-center">Low</td>
+        <td headers="header4" class="text-center">Nil</td>
         <td headers="header5" class="text-center">
           <abbr title="Northwest">NW</abbr> 10<br />
         </td>
