--- a/scenarioT/weather/lightning/index_e.html
+++ b/scenarioT/weather/lightning/index_e.html
@@ -288,12 +288,12 @@
 		<div class="well">
 <h2 class="mrgn-tp-0">Weather Links</h2>
 	<ul class="lst-spcd">
-		<li><a href="../../weather//canada_e.html">Canadian Weather</a></li>
-		<li><a href="../../weather//warnings/index_e.html">Public Alerts - Canada</a></li>
-		<li><a href="https://gc-proto.github.io/weather/radar/index_thunder_e.html">Radar - Canada</a></li>
-		<li><a href="/satellite/index_e.html">Satellite - Canada</a></li>
+		<li><a href="../../weather/canada_e.html">Canadian Weather</a></li>
+		<li><a href="../../weather/warnings/index_e.html">Public Alerts - Canada</a></li>
+		<li><a href="../../weather/radar/index_e.html">Radar - Canada</a></li>
+		<li><a href="../../weather/satellite/index_e.html">Satellite - Canada</a></li>
 		<li><a href="/saisons/index_e.html">Seasonal forecasts</a></li>
-		<li><a href="../../weather//mainmenu/airquality_menu_e.html">Air Quality </a></li>
+		<li><a href="../../weather/mainmenu/airquality_menu_e.html">Air Quality </a></li>
 		<li><a href="/marine/index_e.html">Marine - Canada</a></li>
 		<li><a href="http://ec.gc.ca/rhc-wsc/default.asp?lang=En&amp;n=4EED50F1-1">Water Level and Flow</a></li>
 	</ul>
@@ -354,7 +354,7 @@
 			<li><a title="Arctic Lightning Map" href="index_e.html?id=ARC#mapTop">Arctic</a></li>
 			<li><a title="Pacific Lightning Map" href="index_e.html?id=PAC#mapTop">Pacific</a></li>
 			<li><a title="Prairies Lightning Map" href="index_e.html?id=WRN#mapTop">Prairies</a></li>
-			<li><a title="Ontario Lightning Map" href="index_e.html?id=ONT#mapTop">Ontario</a></li>
+			<li><a title="Ontario Lightning Map" href="../../weather/lightning/ONT-index_e.html">Ontario</a></li>
 			<li><a title="Quebec Lightning Map" href="index_e.html?id=QUE#mapTop">Quebec</a></li>
 			<li><a title="Atlantic Lightning Map" href="index_e.html?id=ATL#mapTop">Atlantic</a></li>
 		</ul>
@@ -386,7 +386,7 @@
 		alt="Prairies"
 		shape="poly"
 		coords="185,266,146,363,157,375,163,398,170,417,181,426,176,442,178,457,194,461,232,469,265,476,314,483,345,486,382,486,382,423,436,355,418,348,404,354,406,346,397,324,385,321,386,305,357,303,326,302,284,296,241,287,186,265" />
-<area href="index_e.html?id=ONT#mapTop"
+<area href="../../weather/lightning/ONT-index_e.html"
 		title="Ontario"
 		alt="Ontario"
 		shape="poly"
@@ -412,7 +412,7 @@
       	<ul class="mrgn-bttm-lg lst-spcd">
             <li><a href="../../weather/canada_e.html">Canadian Weather</a></li>
             <li><a href="../../weather/radar/index_e.html">Radar - Canada</a></li>
-            <li><a href="/satellite/index_e.html">Satellite - Canada</a></li>
+            <li><a href="../../weather/satellite/index_e.html">Satellite - Canada</a></li>
             <li><a href="/marine/index_e.html">Marine - Canada</a></li>
             <li><a href="../../weather//mainmenu/airquality_menu_e.html">Air Quality</a></li>
             <li><a href="http://www.ec.gc.ca/glaces-ice/default.asp?lang=En&amp;n=D32C361E-1">Canadian Ice Service</a></li>
