--- a/scenarioA/weather/city/pages/on-118_metric_e.html
+++ b/scenarioA/weather/city/pages/on-118_metric_e.html
@@ -1031,25 +1031,25 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <a class="btn btn-default btn-sm btn-block wxo-imperial-hide wxo-city-hidden" role="button" href="/past_conditions/index_e.html?station=yow&amp;unit=imperial">Past 24 hour Conditions</a>
       </li>
       <li>
-        <a href="/radar/index_e.html?id=xft" class="btn btn-default btn-sm btn-block">Radar</a>
+        <a href="../../weather/radar/xft-index_e.html" class="btn btn-default btn-sm btn-block">Radar</a>
       </li>
       <li>
-        <a href="/satellite/index_e.html#goes_east" class="btn btn-default btn-sm btn-block">Satellite</a>
+        <a href="../../satellite/index_e.html#goes_east" class="btn btn-default btn-sm btn-block">Satellite</a>
       </li>
       <li>
-        <a href="/lightning/index_e.html" class="btn btn-default btn-sm btn-block">Lightning</a>
+        <a href="../../lightning/index_e.html" class="btn btn-default btn-sm btn-block">Lightning</a>
       </li>
       <li>
-        <a href="/forecast/hourly/on-118_metric_e.html" class="btn btn-default btn-sm btn-block">24 Hour Forecast</a>
+        <a href="../../forecast/hourly/on-118_metric_e.html" class="btn btn-default btn-sm btn-block">24 Hour Forecast</a>
       </li>
       <li>
-        <a href="/airquality/pages/onaq-008_e.html" class="btn btn-default btn-sm btn-block">Air Quality Health Index</a>
+        <a href="../../airquality/pages/onaq-008_e.html" class="btn btn-default btn-sm btn-block">Air Quality Health Index</a>
       </li>
       <li>
-        <a class="btn btn-default btn-sm btn-block" href="/warnings/index_e.html">Alerts</a>
+        <a class="btn btn-default btn-sm btn-block" href="../../warnings/index_e.html">Alerts</a>
       </li>
       <li>
-        <a href="/jet_stream/index_e.html" class="btn btn-default btn-sm btn-block">Jet Stream</a>
+        <a href="../../jet_stream/index_e.html" class="btn btn-default btn-sm btn-block">Jet Stream</a>
       </li>
       <li>
         <a href="http://climate.weather.gc.ca/climate_data/daily_data_e.html?StationID=49568" class="btn btn-default btn-sm btn-block">Historical Weather</a>
