--- a/scenarioS/weather/city/pages/on-118_metric_e.html
+++ b/scenarioS/weather/city/pages/on-118_metric_e.html
@@ -1038,7 +1038,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <a class="btn btn-default btn-sm btn-block wxo-imperial-hide wxo-city-hidden" role="button" href="../../../weather/past_conditions/index_e.html">Past 24 hour Conditions</a>
       </li>
       <li>
-        <a href="../../../weather/radar/index_e.html" class="btn btn-default btn-sm btn-block">Radar</a>
+        <a href="../../../weather/radar/xft-index_e.html" class="btn btn-default btn-sm btn-block">Radar</a>
       </li>
       <li>
         <a href="../../../weather/satellite/index_e.html" class="btn btn-default btn-sm btn-block">Satellite</a>
