--- a/scenarioA/weather/city/pages/on-118_metric_e.html
+++ b/scenarioA/weather/city/pages/on-118_metric_e.html
@@ -185,14 +185,14 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </summary>
         <ul class="hidden-print hidden-xs pull-right list-inline mrgn-rght-sm mrgn-bttm-0 wxo-moveup">
           <li>
-            <a class="wxo-metric-hide" href="/past_conditions/index_e.html?station=yow">Past 24 hours</a>
-            <a class="wxo-imperial-hide wxo-city-hidden" href="/past_conditions/index_e.html?station=yow&amp;unit=imperial">Past 24 hours</a>
+            <a class="wxo-metric-hide" href="../../past_conditions/index_e.html">Past 24 hours</a>
+            <a class="wxo-imperial-hide wxo-city-hidden" href="../../past_conditions/index_e.html">Past 24 hours</a>
           </li>
           <li class="brdr-lft">
             <a href="../../../weather/radar/xft-index_e.html">Radar</a>
           </li>
           <li class="brdr-lft">
-            <a href="/satellite/index_e.html#goes_east">Satellite</a>
+            <a href="../../satellite/index_e.html">Satellite</a>
           </li>
           <li class="brdr-lft">
             <a href="../../../weather/lightning/index_e.html">Lightning</a>
