--- a/scenarioA/weather/forecast/hourly/on-118_metric_e.html
+++ b/scenarioA/weather/forecast/hourly/on-118_metric_e.html
@@ -171,7 +171,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <div class="clearfix"></div>
 <main role="main" property="mainContentOfPage" class="container">
 <h1 id="wb-cont">24 Hour Forecast - Ottawa (Kanata - Orléans)</h1>
-<div id="watch"><h2><a href="../../../weather/warnings/ottawa-report_e.html">SEVERE THUNDERSTORM WATCH IN EFFECT</a></h2></div>
+<div id="statement"><h2><a href="../../../weather/warnings/ottawa-report_e.html">SPECIAL AIR QUALITY STATEMENT IN EFFECT</a></h2></div>
 <div class="table-responsive">
   <table class="table table-striped table-hover table-condensed wxo-media">
     <colgroup>
@@ -199,13 +199,13 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
     </thead>
     <tbody>
       <tr>
-        <th class="wxo-th-bkg" colspan="5">23 August 2017</th>
+        <th class="wxo-th-bkg" colspan="5">24 August 2017</th>
       </tr>
       <tr>
         <td headers="header1" class="text-center">15:00</td>
         <td headers="header2" class="text-center">20</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/06.png" alt="Chance of showers" /></span><div class="media-body">
-            <p>Chance of showers</p>
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/44.png" alt="Smoke" /></span><div class="media-body">
+            <p>Smoke</p>
           </div>
         </td>
         <td headers="header4" class="text-center">Low</td>
