--- a/scenarioA/weather/city/pages/on-118_metric_e.html
+++ b/scenarioA/weather/city/pages/on-118_metric_e.html
@@ -648,7 +648,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
               <tbody>
                 <tr class="pdg-btm-0">
                   <td>
-                    <a href="/weather/forecast/hourly/on-118_metric_e.html">
+                    <a href="../../forecast/hourly/on-118_metric_e.html">
                       <strong title="Sunday">Today</strong>
                     </a>
                   </td>
@@ -755,7 +755,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           <div class="row">
             <div class="col-xs-6"><img width="60" height="51" src="../../../weather/weathericons/44.gif" alt="Smoke" class="pull-right" title="Smoke"></div>
             <div class="col-xs-6">
-              <a href="/forecast/hourly/on-118_metric_e.html">
+              <a href="../../forecast/hourly/on-118_metric_e.html">
                 <strong title="Friday">Today</strong>
               </a>
               <br><span class="high wxo-metric-hide" title="max">25&deg;<abbr title="Celsius">C</abbr>
@@ -1027,11 +1027,11 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
     </section>
     <ul class="list-unstyled visible-xs wxo-btn">
       <li>
-        <a class="btn btn-default btn-sm btn-block wxo-metric-hide" role="button" href="/past_conditions/index_e.html?station=yow">Past 24 hour Conditions</a>
-        <a class="btn btn-default btn-sm btn-block wxo-imperial-hide wxo-city-hidden" role="button" href="/past_conditions/index_e.html?station=yow&amp;unit=imperial">Past 24 hour Conditions</a>
+        <a class="btn btn-default btn-sm btn-block wxo-metric-hide" role="button" href="../../past_conditions/index_e.html?station=yow">Past 24 hour Conditions</a>
+        <a class="btn btn-default btn-sm btn-block wxo-imperial-hide wxo-city-hidden" role="button" href="../../past_conditions/index_e.html?station=yow&amp;unit=imperial">Past 24 hour Conditions</a>
       </li>
       <li>
-        <a href="../../weather/radar/xft-index_e.html" class="btn btn-default btn-sm btn-block">Radar</a>
+        <a href="../../radar/xft-index_e.html" class="btn btn-default btn-sm btn-block">Radar</a>
       </li>
       <li>
         <a href="../../satellite/index_e.html#goes_east" class="btn btn-default btn-sm btn-block">Satellite</a>
@@ -1113,7 +1113,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       	<ul class="mrgn-bttm-lg lst-spcd">
             <li><a href="../../../weather/canada_e.html">Canadian Weather</a></li>
             <li><a href="../../../weather/radar/index_e.html">Radar - Canada</a></li>
-            <li><a href="/satellite/index_e.html">Satellite - Canada</a></li>
+            <li><a href="../../../weather/satellite/index_e.html">Satellite - Canada</a></li>
             <li><a href="/marine/index_e.html">Marine - Canada</a></li>
             <li><a href="../../../weather/mainmenu/airquality_menu_e.html">Air Quality</a></li>
             <li><a href="http://www.ec.gc.ca/glaces-ice/default.asp?lang=En&amp;n=D32C361E-1">Canadian Ice Service</a></li>
