--- a/scenarioT/weather/forecast/hourly/on-118_metric_e.html
+++ b/scenarioT/weather/forecast/hourly/on-118_metric_e.html
@@ -211,7 +211,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
         <td headers="header4" class="text-center">Low</td>
         <td headers="header5" class="text-center">
-          <abbr title="West">S SW</abbr> 17<br />
+          <abbr title="South">S SW</abbr> 17<br />
 									</td>
       </tr>
 	  
@@ -223,7 +223,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
         <td headers="header4" class="text-center">Low</td>
         <td headers="header5" class="text-center">
-          <abbr title="West">S SW</abbr> 17<br />
+          <abbr title="South">S </abbr> 15<br />
 									</td>
       </tr>
       <tr>
@@ -235,7 +235,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
         <td headers="header4" class="text-center">Low</td>
         <td headers="header5" class="text-center">
-          <abbr title="West">S SW</abbr> 17<br />
+          <abbr title="South">S </abbr> 15<br />
 									</td>
       </tr>
       <tr>
@@ -247,7 +247,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
         <td headers="header4" class="text-center">Low</td>
         <td headers="header5" class="text-center">
-          <abbr title="West">S SW</abbr> 17<br />
+          <abbr title="South">S </abbr> 15<br />
 									</td>
       </tr>
       <tr>  
@@ -261,7 +261,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
         <td headers="header4" class="text-center">High</td>
         <td headers="header5" class="text-center">
-          <abbr title="Northwest">NW</abbr> 20<br />
+          <abbr title="South">S</abbr> 15<br />
 									</td>
       </tr>
       <tr>
@@ -273,7 +273,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
         <td headers="header4" class="text-center">High</td>
         <td headers="header5" class="text-center">
-          <abbr title="Northwest">NW</abbr> 10<br />
+          <abbr title="South">S</abbr>15<br />
         </td>
       </tr>
       <tr>
@@ -285,32 +285,32 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
         <td headers="header4" class="text-center">High</td>
         <td headers="header5" class="text-center">
-          <abbr title="Northwest">NW</abbr> 10<br />
+          <abbr title="South">S</abbr> 15<br />
         </td>
       </tr>
       <tr>
         <td headers="header1" class="text-center">15:00</td>
         <td headers="header2" class="text-center">14</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/06.png" alt="Chance of showers" /></span><div class="media-body">
-            <p>Chance of showers</p>
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/19.png" alt="Periods of rain" /></span><div class="media-body">
+            <p>Periods of rain. Risk of severe thunderstorms</p>
           </div>
         </td>
-        <td headers="header4" class="text-center">Low</td>
+        <td headers="header4" class="text-center">High</td>
         <td headers="header5" class="text-center">
-          <abbr title="Northwest">NW</abbr> 10<br />
+          <abbr title="South">S</abbr> 15<br />
         </td>
       </tr>
      
       <tr>
         <td headers="header1" class="text-center">16:00</td>
         <td headers="header2" class="text-center">13</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/06.png" alt="Chance of showers" /></span><div class="media-body">
-            <p>Chance of showers</p>
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/19.png" alt="Chance of showers" /></span><div class="media-body">
+            <p>Periods of rain. Risk of severe thunderstorms</p>
           </div>
         </td>
-        <td headers="header4" class="text-center">Low</td>
+        <td headers="header4" class="text-center">High</td>
         <td headers="header5" class="text-center">
-          <abbr title="Northwest">NW</abbr> 10<br />
+          <abbr title="Southwest">SW</abbr> 20<br />
         </td>
       </tr>
       <tr>
@@ -322,7 +322,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
         <td headers="header4" class="text-center">Low</td>
         <td headers="header5" class="text-center">
-          <abbr title="Northwest">NW</abbr> 10<br />
+          <abbr title="Southwest">SW</abbr> 20<br />
         </td>
       </tr>
       <tr>
@@ -334,7 +334,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
         <td headers="header4" class="text-center">Low</td>
         <td headers="header5" class="text-center">
-          <abbr title="Northwest">NW</abbr> 10<br />
+          <abbr title="Southwest">SW</abbr> 20<br />
         </td>
       </tr>
       <tr>
@@ -346,7 +346,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
         <td headers="header4" class="text-center">Low</td>
         <td headers="header5" class="text-center">
-          <abbr title="Northwest">NW</abbr> 10<br />
+          <abbr title="Southwest">SW</abbr> 20<br />
         </td>
       </tr>
       <tr>
@@ -358,7 +358,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
         <td headers="header4" class="text-center">Nil</td>
         <td headers="header5" class="text-center">
-          <abbr title="Northwest">NW</abbr> 10<br />
+          <abbr title="Southwest">SW</abbr> 20<br />
         </td>
       </tr>
       <tr>
@@ -370,7 +370,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
         <td headers="header4" class="text-center">Nil</td>
         <td headers="header5" class="text-center">
-          <abbr title="Northwest">NW</abbr> 10<br />
+          <abbr title="Southwest">SW</abbr> 20<br />
         </td>
       </tr>
       <tr>
@@ -382,7 +382,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
         <td headers="header4" class="text-center">Nil</td>
         <td headers="header5" class="text-center">
-          <abbr title="Northwest">NW</abbr> 10<br />
+          <abbr title="Southwest">SW</abbr> 20<br />
         </td>
       </tr>
       <tr>
@@ -394,7 +394,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
         <td headers="header4" class="text-center">Nil</td>
         <td headers="header5" class="text-center">
-          <abbr title="Northwest">NW</abbr> 10<br />
+          <abbr title="Southwest">SW</abbr> 20<br />
         </td>
       </tr>
       <tr>
@@ -406,7 +406,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
         <td headers="header4" class="text-center">Nil</td>
         <td headers="header5" class="text-center">
-          <abbr title="Northwest">NW</abbr> 10<br />
+          <abbr title="Southwest">SW</abbr> 20<br />
         </td>
       </tr>
       
