--- a/scenarioT/weather/forecast/hourly/on-118_metric_e.html
+++ b/scenarioT/weather/forecast/hourly/on-118_metric_e.html
@@ -211,7 +211,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         </td>
         <td headers="header4" class="text-center">Low</td>
         <td headers="header5" class="text-center">
-          <abbr title="South">S SW</abbr> 17<br />
+          <abbr title="South">S </abbr> 15<br />
 									</td>
       </tr>
 	  
