--- a/scenarioT/weather/city/pages/on-118_metric_e.html
+++ b/scenarioT/weather/city/pages/on-118_metric_e.html
@@ -261,10 +261,10 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
                 <dl class="dl-horizontal wxo-conds-col3">
                   <dt>Wind:</dt>
 				  <dd class="longContent mrgn-bttm-0 wxo-metric-hide">
-					<abbr title="South-Southwest">SSW</abbr> 20 <abbr title="kilometres per hour">km/h</abbr>
+					<abbr title="South-Southwest">S</abbr> 15 <abbr title="kilometres per hour">km/h</abbr>
 				  </dd>
 				  <dd class="longContent mrgn-bttm-0 wxo-imperial-hide wxo-city-hidden">
-					<abbr title="South-Southwest">SSW</abbr> 10 <abbr title="miles per hour">mph</abbr>
+					<abbr title="South-Southwest">S</abbr> 10 <abbr title="miles per hour">mph</abbr>
 				  </dd>
 				  <dt>
 					<a href="https://web.archive.org/web/20170625161729/http://ec.gc.ca/meteo-weather/default.asp?lang=En&amp;n=6C5D4990-1#humidex">Humidex</a>:</dt>
@@ -387,10 +387,10 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
           <dl class="dl-horizontal wxo-conds-xs">
             <dt>Wind:</dt>
             <dd class="longContent mrgn-bttm-0 wxo-metric-hide">
-              <abbr title="South-Southwest">SSW</abbr> 20 <abbr title="kilometres per hour">km/h</abbr>
+              <abbr title="South-Southwest">S</abbr> 15 <abbr title="kilometres per hour">km/h</abbr>
             </dd>
             <dd class="longContent mrgn-bttm-0 wxo-imperial-hide wxo-city-hidden">
-              <abbr title="South-Southwest">SSW</abbr> 10 <abbr title="miles per hour">mph</abbr>
+              <abbr title="South-Southwest">S</abbr> 10 <abbr title="miles per hour">mph</abbr>
             </dd>
             <dt>
               <a href="http://ec.gc.ca/meteo-weather/default.asp?lang=En&amp;n=6C5D4990-1#humidex">Humidex</a>:</dt>
@@ -433,10 +433,10 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             <dd class="mrgn-bttm-0">65%</dd>
             <dt>Wind:</dt>
             <dd class="longContent mrgn-bttm-0 wxo-metric-hide">
-              <abbr title="South-Southwest">SSW</abbr> 20 <abbr title="kilometres per hour">km/h</abbr>
+              <abbr title="South-Southwest">S</abbr> 15 <abbr title="kilometres per hour">km/h</abbr>
             </dd>
             <dd class="longContent mrgn-bttm-0 wxo-imperial-hide wxo-city-hidden">
-              <abbr title="South-Southwest">SSW</abbr> 10 <abbr title="miles per hour">mph</abbr>
+              <abbr title="South-Southwest">S</abbr> 10 <abbr title="miles per hour">mph</abbr>
             </dd>
             <dt>
               <a href="https://web.archive.org/web/20170625161729/http://ec.gc.ca/meteo-weather/default.asp?lang=En&amp;n=6C5D4990-1#humidex">Humidex</a>:</dt>
@@ -652,13 +652,13 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
                       <strong title="Thursday">Today</strong>
                     </a>
                   </td>
-                  <td>Increasing cloudiness. A few showers or thunderstorms beginning near noon. Risk of a severe thunderstorm. Wind becoming southwest 20 km/h this afternoon. High 21. Humidex 25. UV index 3 or moderate.</td>
+                  <td>Increasing cloudiness. A few showers or thunderstorms beginning near noon. Risk of a severe thunderstorm. Wind becoming southwest 20 km/h this afternoon. High 21. UV index 3 or moderate.</td>
                 </tr>
                 <tr class="pdg-tp-0">
                   <td>
                     <strong title="Thursday night">Tonight</strong>
                   </td>
-                  <td>A few showers or thunderstorms ending late this evening then mainly cloudy. Risk of a severe thunderstorm. Wind southwest 20 km/h becoming light this evening. Low 12.</td>
+                  <td>A few showers or thunderstorms ending late this evening then mainly cloudy. Risk of a severe thunderstorm. Wind southwest 20 km/h becoming light this evening. Low 10.</td>
                 </tr>
                 <tr class="pdg-btm-0">
                   <td class="uniform_width">
@@ -766,7 +766,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-12 brdr-bttm mrgn-bttm-md">Increasing cloudiness. A few showers or thunderstorms beginning near noon. Risk of a severe thunderstorm. Wind becoming southwest 20 km/h this afternoon. High 21. Humidex 25.</div>
+            <div class="col-xs-12 brdr-bttm mrgn-bttm-md">Increasing cloudiness. A few showers or thunderstorms beginning near noon. Risk of a severe thunderstorm. Wind becoming southwest 20 km/h this afternoon. High 21.</div>
           </div>
           <div class="row">
             <div class="col-xs-6"><img width="60" height="51" src="../../../weather/weathericons/39.gif" alt="Chance of showers" class="pull-right" title="Chance of showers"></div>
@@ -778,7 +778,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-12 brdr-bttm mrgn-bttm-md">A few showers or thunderstorms ending late this evening then mainly cloudy. Risk of a severe thunderstorm. Wind southwest 20 km/h becoming light this evening. Low 12.</div>
+            <div class="col-xs-12 brdr-bttm mrgn-bttm-md">A few showers or thunderstorms ending late this evening then mainly cloudy. Risk of a severe thunderstorm. Wind southwest 20 km/h becoming light this evening. Low 10.</div>
           </div>
           <div class="row">
             <div class="col-xs-6"><img width="60" height="51" src="../../../weather/weathericons/06.gif" alt="Chance of showers" class="pull-right" title="Chance of showers"></div>
