--- a/scenarioT/weather/forecast/hourly/on-118_metric_e.html
+++ b/scenarioT/weather/forecast/hourly/on-118_metric_e.html
@@ -304,7 +304,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">16:00</td>
         <td headers="header2" class="text-center">13</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/19.png" alt="Chance of showers" /></span><div class="media-body">
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/19.png" alt="Periods of rain" /></span><div class="media-body">
             <p>Periods of rain. Risk of severe thunderstorms</p>
           </div>
         </td>
@@ -316,7 +316,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">17:00</td>
         <td headers="header2" class="text-center">13</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/06.png" alt="Partly cloudy" /></span><div class="media-body">
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/06.png" alt="Periods of rain" /></span><div class="media-body">
             <p>Chance of showers</p>
           </div>
         </td>
@@ -328,7 +328,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">18:00</td>
         <td headers="header2" class="text-center">12</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/06.png" alt="Partly cloudy" /></span><div class="media-body">
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/06.png" alt="Periods of rain" /></span><div class="media-body">
             <p>Chance of showers</p>
           </div>
         </td>
@@ -340,7 +340,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
         <td headers="header1" class="text-center">19:00</td>
         <td headers="header2" class="text-center">11</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/06.png" alt="Partly cloudy" /></span><div class="media-body">
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/36.png" alt="Periods of rain" /></span><div class="media-body">
             <p>Chance of showers</p>
           </div>
         </td>
@@ -352,7 +352,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
          <td headers="header1" class="text-center">20:00</td>
         <td headers="header2" class="text-center">11</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/06.png" alt="Partly cloudy" /></span><div class="media-body">
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/36.png" alt="Periods of rain" /></span><div class="media-body">
             <p>Chance of showers</p>
           </div>
         </td>
@@ -364,7 +364,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <tr>
          <td headers="header1" class="text-center">21:00</td>
         <td headers="header2" class="text-center">11</td>
-        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/06.png" alt="Partly cloudy" /></span><div class="media-body">
+        <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/36.png" alt="Periods of rain" /></span><div class="media-body">
             <p>Chance of showers</p>
           </div>
         </td>
