--- a/scenarioA/weather/city/pages/on-118_metric_e.html
+++ b/scenarioA/weather/city/pages/on-118_metric_e.html
@@ -13,7 +13,7 @@
    <meta name="dcterms.issued" title="W3CDTF" content="2013-04-16" />
    <meta name="dcterms.modified" title="W3CDTF" content="2017-09-05" />
 <!--wxo-b3-->
-<title>St. John's, NL - 7 Day Forecast - Environment Canada</title>
+<title>Ottawa (Kanata - Orléans), ON - 7 Day Forecast - Environment Canada</title>
 <meta name="dcterms.title" content="St. John's, NL - 7 Day Forecast - Environment Canada">
 <!--[if gte IE 9 | !IE ]><!-->
  <link href="../../../weather/template/GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon" />
