--- a/scenarioT/weather/forecast/hourly/on-118_metric_e.html
+++ b/scenarioT/weather/forecast/hourly/on-118_metric_e.html
@@ -183,7 +183,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
     </colgroup>
     <thead>
       <tr>
-        <th id="header1" class="wxo-tb-head">Date/Time<br />(<abbr title="Eastern Daylight Time">EDT</abbr>)</th>
+        <th id="header1" class="wxo-tb-head">Date/Time<br />(<abbr title="Eastern Daylight Time">EST</abbr>)</th>
         <th id="header2" class="wxo-tb-head">
           <abbr title="Temperature">Temp.</abbr>
           <br />(<abbr title="degrees Celsius">&deg;C</abbr>)</th>
@@ -199,7 +199,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
     </thead>
     <tbody>
       <tr>
-        <th class="wxo-th-bkg" colspan="5"><!--23 August 2017--></th>
+        <th class="wxo-th-bkg" colspan="5">24 August 2017</th>
       </tr>
       <tr>
 	  
